# freemint

./: .cvsignore  .gitignore  .travis.yml  BUGS  CHANGES  CONFIGVARS  COPYING  COPYING.MiNT  ChangeLog.#1.15.10  ChangeLog.#1.15.11  ChangeLog.#1.15.12  ChangeLog.#1.16.0  ChangeLog.#1.17.0  DEPENDENCIES  EXTRAFILES  HACKING  Makefile  PHONY  README  README.md  RULES  docs  todo.txt  tools.mak
.scripts/: README.md  before_script.sh  build.sh  deploy.sh  install-apps.sh  install-dosfstools.sh  install-freemint.sh  install-hcp.sh  install-libcmini.sh  install-udo.sh  install_ssh_id.sh  kernel_targets.sh  netusbee_targets.sh  prepare-aranym.sh  prepare-snapshot.sh  setup_env.sh  (+7 more)
tools/toswin2/vttest/: .gitignore  BUGS  CHANGES  COPYING  MANIFEST  Makefile.in  README  aclocal.m4  autogen.sh  charsets.c  color.c  configure.ac  draw.c  draw.h  esc.c  esc.h  keyboard.c  main.c  mouse.c  nonvt100.c  patchlev.h  printer.c  reports.c  reset.c  setup.c  sixel.c  status.c  tek4014.c  ttymodes.c  ttymodes.h  unix_io.c  utf8.c  vt220.c  vt320.c  vt420.c  vt52.c  vt520.c  vttest.1  vttest.h  xterm.c
tools/toswin2/vttest/m4/: cf_add_cflags.m4  cf_arg_disable.m4  cf_arg_option.m4  cf_cc_env_flags.m4  cf_clang_compiler.m4  cf_const_x_string.m4  cf_disable_echo.m4  cf_fcntl_vs_ioctl.m4  cf_gcc_attributes.m4  cf_gcc_version.m4  cf_gcc_warnings.m4  cf_gnu_source.m4  cf_intel_compiler.m4  cf_make_tags.m4  cf_mixedcase_filenames.m4  cf_msg_log.m4  cf_path_syntax.m4  cf_posix_c_source.m4  cf_posix_vdisable.m4  cf_posix_visible.m4  cf_prog_cc.m4  cf_upper.m4  cf_verbose.m4  cf_with_warnings.m4
(+3458 files in other folders)
